--- a/signIn.html
+++ b/signIn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>SignIn</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,41 +14,46 @@
     <link rel="stylesheet" href="/home.css" />
   </head>
   <body>
-    <header class="container">
-      <div class="py-4">
-        <h2 class="head_title">MIDNIGHT MARKET</h2>
-        <button class="top_button" type="button">
-          <a class="signIn_button" href="/signIn.html"
-            ><span>SIGN IN WITH STEAM</span></a
-          >
+    <!-- form code -->
+    <form id="contact" method="post">
+      <h3 class="text-center">SignIn Form</h3>
+      <fieldset>
+        <label for="email">Email:</label>
+        <input
+          placeholder="Your Email Address"
+          type="email"
+          name="email"
+          tabindex="1"
+          required
+          autofocus
+          class="email"
+        />
+      </fieldset>
+      <fieldset>
+        <label for="password"> Password: </label>
+        <input
+          placeholder="Your password"
+          type="password"
+          tabindex="2"
+          required
+          class="password"
+        />
+      </fieldset>
+      <fieldset>
+        <button
+          name="submit"
+          type="submit"
+          id="contact-submit"
+          data-submit="...Sending"
+          data-bs-dismiss="modal"
+          class="submit"
+        >
+          Submit
         </button>
-      </div>
-    </header>
-    <main class="container">
-      <div class="position-relative w-100 h-100">
-        <img class="w-100 h-100" src="assets/mainImage.png" alt="main Image" />
-      </div>
-    </main>
-    <footer class="position-fixed bottom-0 bg-black w-100 text-white">
-      <div
-        class="
-          d-flex
-          flex-sm-column flex-lg-row flex-column
-          justify-content-between
-          align-items-center
-          px-2
-          container
-        "
-      >
-        <p class="">
-          The site was built with
-          <a class="text-white" href="/">GrooveFunnels</a>
-        </p>
-        <p class="">
-          If this site is <sup>spam</sup> or <sup>abuse, report here.</sup>
-        </p>
-      </div>
-    </footer>
+      </fieldset>
+    </form>
+    <!-- form code -->
+
     <!-- bootstrap js file -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
